Fix Dockerfile to use Java 17 and Tomcat 9.0